crates/rargc/tests/snapshots/minimal__impl-2.snap
---
source: crates/rargc/tests/minimal.rs
description: "Run the minimal.sh script with '[\"--help\"]'"
expression: "String::from_utf8(match \"stdout\" {\n            \"stdout\" => output.stdout,\n            \"stderr\" => output.stderr,\n            _ => panic!(\"invalid stream\"),\n        }).unwrap_or_else(|e|\n        panic!(\"failed to execute the '{dst}' script with error: {e}\"))"
---
Sample minimal application without commands

[4mUsage:[0m
  minimal [OPTIONS] SOURCE [TARGET] 
  minimal -h|--help
  minimal -v|--version

[4mExamples:[0m
  minimal example.com
    Download a file from the internet
  minimal example.com ./output -f
    Download a file from the internet and force save it to ./output

[4mArguments:[0m
  SOURCE
    URL to download from
    [@required]
  TARGET
    Target filename (default: same as source)

[4mOptions:[0m
  -f --force
    Overwrite existing files
  -h --help
    Print help
  -v --version
    Pring version

